--- a/public/css/stylus/basic.styl
+++ b/public/css/stylus/basic.styl
@@ -154,7 +154,7 @@
     .dz-error-message
       display none
       absolute top -5px left -20px
-      background rgba(245, 245, 245, 0.8)
+      background rgba(245, 245, 245, 0)
       padding 8px 10px
       color #800
       min-width 140px
